--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,7 @@ dependencies {
     //Glide
     implementation "com.github.bumptech.glide:glide:4.11.0"
     kapt "com.github.bumptech.glide:compiler:4.11.0"
+
+    //SwipeLayout
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 }
