--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,8 @@ dependencies {
 
     //Permissions
     implementation 'com.github.sembozdemir:PermissionsKt:1.0.0'
+
+    //Barcode scanner
+    implementation 'me.dm7.barcodescanner:zxing:1.9.13'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 }
